--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                 `官能基: ${pInfo.group.name}\n` +
                 komento;  // 慣用名と備考を追加
         } else {
-            this.analysisDiv.innerText = "＿＿＿＿＿ 化合物分析カメラ ＿＿＿＿＿\nカードをカメラで読み取ります";
+            this.analysisDiv.innerText = "⬢⬡⬢ 化合物分析カメラ ⬢⬡⬢\nカードをカメラで読み取ります";
         }
       }
     });
@@ -905,7 +905,8 @@
         z-index: 999; 
         color: white; 
         font-family: monospace; 
-        font-size: 27px; 
+        font-size: 24px; 
+        font-weight: bold;
         background: rgba(255,255,255,1); 
         padding: 5px; 
         white-space: pre-wrap; 
