--- a/index.html
+++ b/index.html
@@ -1056,6 +1056,25 @@
         border: 5px solid #2b2a54;
         border-radius: 50%;
       }
+      #maru3 {
+          position: absolute; 
+        bottom: 220px; /* 左上に変更 */
+        right: 130px;               /* 左端から50%の位置 */
+         transform: translateX(-50%); /* 中央に寄せるための調整 */
+        z-index: 998; 
+        width: 35px; 
+        height: 35px;
+        color: #2b2a54; 
+        font-family: monospace; 
+        font-size: 18px; 
+        background: #FFFFFF; 
+        padding: 10px; 
+        white-space: pre-wrap; 
+        text-align: center; /* 左寄せに変更 */
+        font-weight: bold; 
+        border: 5px solid #2b2a54;
+        border-radius: 50%;
+      }
 
     </style>
   </head>
@@ -1080,6 +1099,10 @@
     <p></p>
   </div>
   <div id="maru2">
+    <p></p>
+    <p></p>
+  </div>
+    <div id="maru3">
     <p></p>
     <p></p>
   </div>
