--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@
         border: 5px solid #2b2a54;
         border-radius: 50%;
       }
-      #maru3 {
+      /* #maru3 {
           position: absolute; 
         bottom: 220px; /* 左上に変更 */
         right: 130px;               /* 左端から50%の位置 */
@@ -1074,7 +1074,7 @@
         font-weight: bold; 
         border: 5px solid #2b2a54;
         border-radius: 50%;
-      }
+      } */
 
     </style>
   </head>
